# poly-market-maker

./: .gitignore  Dockerfile  README.md  check_polymarket_websocket  check_token_ids.py  check_websocket.py  clinerules  data_speed_test.py  install.sh  pyproject.toml  report_generator.py  run_live.py  run_simulation.py  verify_user_ws.py
config/: amm.json  bands.json  config.py
docs/: architecture_proposal_v2.md  refresh_frequency_and_debounce.md  runtime_flow.md
poly_market_maker/: app.py  args.py  clob_api.py  constants.py  contracts.py  market.py  metrics.py  order.py  orderbook.py  orderbook_manager.py  price_feed.py  price_listener.py  shadow_book.py  strategy.py  user_listener.py  utils.py
poly_market_maker/helper_scripts/: all_events.csv  approve_all.py  detect_usdc.py  enable_trading.py  fetch_events.py  inventory_status.py  market_research.ipynb  market_volume_research.csv  master_approval.py  polymarket_data.py  sell_shares.py  transfer_shares.py
poly_market_maker/simulation/: mock_exchange.py  shadow_book.py
poly_market_maker/strategies/: bands.py  bands_strategy.py
poly_market_maker/utils/: __init__.py  auth.py  key_generator.py  math_operations.py  metrics_tracker.py  setup.py
tasks/: 01-shadow-book.md  02-build-market-recorder  03-Architecture-execution-engine-decoupling  04-fix-simulation-error  05-simulation-feature  06-wire-shadowbook
tests/: test_amm_strategy.py  test_auth.py  test_band.py  test_market.py
