[tool.poetry]
name = "poly-market-maker"
version = "0.1.0"
description = ""
authors = ["ii <irfanilgin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.4.0"
python-dotenv = "^1.2.1"
web3 = "^7.14.0"
prometheus-client = "^0.23.1"
py-clob-client = "^0.34.4"
py-order-utils = "^0.3.2"
pyyaml = "^6.0.3"
websockets = "^12.0"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"